--- a/Why3Project/report/Project.tex
+++ b/Why3Project/report/Project.tex
@@ -174,7 +174,15 @@ let rec compute (t:term) (n:int) : int
 	chacun traitant des deux possibilités. Je les ai écrit comme des \mintinline{ocaml}{function lemma}, mais je n'ai finalement
 	pas eu besoin de détailler la preuve: Z3 a su prouver ces deux lemmes sans indication.
 
-	\paragraph{23. inv\_simpl\_simpl}
+	\paragraph{23. inv\_simple\_simple} C'est la fonction que j'ai eu le plus de mal à prouver. En plus des deux propriétés précédentes,
+	j'ai ajouté quelques lemmes triviaux pour aider les solveurs pour la suite.
+	La première étape, commune aux deux branches \mintinline{ocaml}{if} et \mintinline{ocaml}{else},
+	consiste à montrer que $2^{2(n+k)} // (p+1) < \frac{1}{x} \times B^n < (2^{2(n+k)} // (p-1)) + 1$.
+	Pour cela, j'utilise l'encadrement initial de $x$ et je passe à l'inverse (le reste suit assez facilement).
+	Je montre également les deux propriétés suivantes qui seront utiles par la suite: $B^{n+k} \leq \frac{p^2}{4}$
+	et $d \leq \frac{p-1}{2}$. La première se montre facilement en remarquant que $B^k \leq p$, et la seconde découle
+	de la première (on minore $d*p$ puis on divise par $p$).
+
 
 	\section{Conclusion}
 		
