--- a/Why3Project/report/Project.tex
+++ b/Why3Project/report/Project.tex
@@ -254,6 +254,7 @@ let ghost function msd_variant (t:term') (n:int) : int =
 		\item Bon pour les disjonctions de cas (cf preuve de compute)
 		\item Eviter de faire trop de résultats intermediaires!
 		\item from\_int implicites?
+		\item ghost if?
 	\end{enumerate}
 
 \end{document}
