--- a/Why3Project/report/Project.tex
+++ b/Why3Project/report/Project.tex
@@ -235,26 +235,37 @@ let ghost function msd_variant (t:term') (n:int) : int =
 	mais peuvent se révéler assez longues pour les faire accepter par Why3, ce qui n'est pas toujours très intéressant/motivant).
 	Le fait de devoir recopier les preuves une seconde fois dans le rapport accentue ce coté redondant (bien que pour ma part
 	j'ai préféré donner les idées plutot que de réelles preuves, afin de respecter le nombre de pages indiqué).
-	Malgré ce coté "paperasse administrative", j'ai trouvé que d'autres preuves étaient assez intéressantes
+	Malgré cela, j'ai trouvé que d'autres preuves étaient assez intéressantes
 	(notamment, la preuve de terminaison de la version finale de \mintinline{ocaml}{compute}).
 	Finalement, je trouve que ce sujet permet tout de même de prouver un résultat intéressant,
 	et m'a permis de bien progresser avec Why3.\\
 	
 	Concernant Why3, j'ai eu beaucoup de mal au début à me familiariser avec le système de preuve.
 	Je n'arrivais pas vraiment à prévoir ce que les solveurs allaient pouvoir prouver ou non,
-	et j'avais du mal à trouver quoi faire pour les aider. Avec le temps j'ai mieux compris comment faire des preuves plus "compréhensibles"
+	et j'avais du mal à trouver quoi faire pour les aider. Avec le temps j'ai mieux compris comment faire des preuves plus compréhensibles
 	par les solveurs, et j'arrivais donc plus rapidement à passer de la preuve papier à une preuve Why3 fonctionnelle.
+	Notamment, j'ai vite compris l'importance de ne pas faire trop de résultats intermédiaires pour ne pas polluer l'environnement
+	(préferer \mintinline{ocaml}{by ... so ...} à une succession d'assertions).
 	Cependant, j'ai trouvé les capacités des solveurs très inégales, certains résultats non triviaux
 	se prouvant parfois automatiquement (la question 22 avec Z3 par exemple) alors que des opérations élémentaires
 	sur les inégalités pouvant mettre à mal tous les solveurs (surtout lorsqu'il s'agit d'inégalités strictes).\\
 
-	Voici quelques observations que j'ai faites, et également quelques remarques/suggestions:
+	Voici quelques suggestions:
 	\begin{enumerate}
-		\item Lemmes en dehors des fonctions: plus efficace pour prouver des résultats mathématiques indépendants.
-		\item Bon pour les disjonctions de cas (cf preuve de compute)
-		\item Eviter de faire trop de résultats intermediaires!
-		\item from\_int implicites?
-		\item ghost if?
+		\item Certains solveurs tels que Why3 se "noient" très vite dans les hypothèses et résultats intermédiaires:
+		ils peuvent se réveler très efficaces pour prouver un résultat toplevel tel qu'un lemme,
+		mais deviennent incapables de prouver ce même résultat lorsque placé au milieu d'une fonction.
+		Cela est compréhensible, néanmoins j'aurais parfois aimé avoir plus de controle là-dessus.
+		Il y a bien la commande \mintinline{ocaml}{clear_but} qui donne du controle, mais je ne la trouve pas très pratique à utiliser
+		(d'ailleurs je ne l'ai pas utilisé) et j'aurais préféré qu'il y ai dans le langage un mot clé tel que \mintinline{ocaml}{using}
+		qui permette de spécifier des lemmes/axiomes à utiliser en priorité, sans pour autant vider intégralement le reste de l'environnement.
+		\item L'utilisation explicite de la fonction \mintinline{ocaml}{from_int} rend les preuves assez lourdes et elles perdent beaucoup en lisibilité.
+		Pour un projet tel que celui-là, il aurait été agréable qu'il y ai une option pour inférer automatiquement les endroits où une conversion
+		entier vers réel est nécessaire.
+		\item L'éditeur a parfois quelques lacunes, notamment l'absence de CTRL+F et le fait que recharger l'environnement efface l'historique
+		de CTRL+Z. D'ailleurs, il serait très agréable de pouvoir utiliser le moteur de Why3 dans un éditeur de texte plus conventionnel, tel
+		que Visual Studio Code (comme il existe deja une version web de Why3, faire une extension pour Visual Studio Code ou même Atom 
+		ne devrait pas être très long).
 	\end{enumerate}
 
 \end{document}
